--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
         </div>
         <div class="content-window" id="content-window">
             <div class="heading">
+                <div class="toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <ul>
-                    <li>Gempa Terkini</li>
+                    <li class="active">Gempa Terkini</li>
                     <li>Gempa Dirasakan</li>
                     <li>Gempa M 5.0+</li>
                     <li>Credits</li>
                 </ul>
             </div>
-            <div class="content">
+            <!-- <div class="content">
                 <div class="left">
                     <h2>Gempa Bumi Terkini</h2>
                     <div class="info-list">
@@ -48,7 +53,7 @@
                 <div class="right">
                     <img src="images/earth.png" alt="">
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
