--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="jumbotron">
             <h1>INFO GEMPA</h1>
             <img src="images/earth.png" alt="earth" id="earth">
-            <p>Menampilkan informasi gempa bumi berdasarkan data dari <a href="https://data.bmkg.go.id/gempabumi/" target="_blank">BMKG</a href=""> </p>
+            <p>Menampilkan informasi gempa bumi berdasarkan data dari <a href="https://data.bmkg.go.id/gempabumi/"
+                    target="_blank">BMKG</a href=""> </p>
             <a href="#content-window" id="icon-arrow"><img src="images/icon-arrow.png" alt=""></a>
         </div>
         <div class="content-window" id="content-window">
@@ -30,7 +31,7 @@
                     <span></span>
                     <span></span>
                 </div>
-                <ul>
+                <ul class="heading-menu">
                     <li class="active">Gempa Terkini</li>
                     <li>Gempa Dirasakan</li>
                     <li>Gempa M 5.0+</li>
@@ -56,6 +57,8 @@
             </div> -->
         </div>
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
