styling content gempa-terkini

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li>Credits</li>
                 </ul>
             </div>
-            <!-- <div class="content">
+            <div class="content gempa-terkini">
                 <div class="left">
                     <h2>Gempa Bumi Terkini</h2>
                     <div class="info-list">
@@ -49,12 +49,14 @@
                         <p><strong>Kedalaman:</strong> 10 Km</p>
                         <p><strong>Potensi:</strong> Gempa ini dirasakan untuk diteruskan pada masyarakat</p>
                     </div>
-                    <button type="button" id="btn-show-maps">Lihat Maps</button>
+                    <a href="">
+                        <button type="button" id="btn-show-maps">Lihat Maps</button>
+                    </a>
                 </div>
                 <div class="right">
                     <img src="images/earth.png" alt="">
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 
