styling gempa-terkini responsive

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <p><strong>Koordinat:</strong> -10.58, 113.41</p>
                         <p><strong>Magnitude:</strong> 5.3</p>
                         <p><strong>Kedalaman:</strong> 10 Km</p>
+                        <p><strong>Wilayah:</strong> Pusat gempa berada di laut 44 km BaratDaya Kaimana</p>
                         <p><strong>Potensi:</strong> Gempa ini dirasakan untuk diteruskan pada masyarakat</p>
                     </div>
                     <a href="">
