--- a/index.html
+++ b/index.html
@@ -32,14 +32,101 @@
                     <span></span>
                 </div>
                 <ul class="heading-menu">
-                    <li class="active">Gempa Terkini</li>
-                    <li>Gempa Dirasakan</li>
+                    <li>Gempa Terkini</li>
+                    <li class="active">Gempa Dirasakan</li>
                     <li>Gempa M 5.0+</li>
                     <li>Credits</li>
                 </ul>
             </div>
-            <div class="content gempa-terkini">
-                <div class="left">
+            <div class="content gempa-dirasakan">
+                <h2>Gempa Dirasakan</h2>
+                <hr>
+                <div class="list-gempa">
+                    <div class="card-gempa">
+                        <img src="images/earthquake-danger.png" alt="">
+                        <div class="info-list">
+                            <p><strong>Tanggal:</strong> 06 Des 2022</p>
+                            <p><strong>Jam:</strong> 17:22:05 WIB</p>
+                            <p><strong>Coordinate:</strong> -10.58,113.41</p>
+                            <p><strong>Magnitude:</strong> 5.3</p>
+                            <p><strong>Kedalaman:</strong> 10 Km</p>
+                            <p><strong>Dirasakan di:</strong> II Jember, II Kuta, II Kuta Selatan, II Denpasar</p>
+                        </div>
+                        <a href="">
+                            <button type="button" id="btn-maps">Lihat Maps</button>
+                        </a>
+                    </div>
+                    <div class="card-gempa">
+                        <img src="images/earthquake-danger.png" alt="">
+                        <div class="info-list">
+                            <p><strong>Tanggal:</strong> 06 Des 2022</p>
+                            <p><strong>Jam:</strong> 17:22:05 WIB</p>
+                            <p><strong>Coordinate:</strong> -10.58,113.41</p>
+                            <p><strong>Magnitude:</strong> 5.3</p>
+                            <p><strong>Kedalaman:</strong> 10 Km</p>
+                            <p><strong>Dirasakan di:</strong> II Jember, II Kuta, II Kuta Selatan, II Denpasar</p>
+                        </div>
+                        <a href="">
+                            <button type="button" id="btn-maps">Lihat Maps</button>
+                        </a>
+                    </div>
+                    <div class="card-gempa">
+                        <img src="images/earthquake-danger.png" alt="">
+                        <div class="info-list">
+                            <p><strong>Tanggal:</strong> 06 Des 2022</p>
+                            <p><strong>Jam:</strong> 17:22:05 WIB</p>
+                            <p><strong>Coordinate:</strong> -10.58,113.41</p>
+                            <p><strong>Magnitude:</strong> 5.3</p>
+                            <p><strong>Kedalaman:</strong> 10 Km</p>
+                            <p><strong>Dirasakan di:</strong> II Jember, II Kuta, II Kuta Selatan, II Denpasar</p>
+                        </div>
+                        <a href="">
+                            <button type="button" id="btn-maps">Lihat Maps</button>
+                        </a>
+                    </div>
+                    <div class="card-gempa">
+                        <img src="images/earthquake-danger.png" alt="">
+                        <div class="info-list">
+                            <p><strong>Tanggal:</strong> 06 Des 2022</p>
+                            <p><strong>Jam:</strong> 17:22:05 WIB</p>
+                            <p><strong>Coordinate:</strong> -10.58,113.41</p>
+                            <p><strong>Magnitude:</strong> 5.3</p>
+                            <p><strong>Kedalaman:</strong> 10 Km</p>
+                            <p><strong>Dirasakan di:</strong> II Jember, II Kuta, II Kuta Selatan, II Denpasar</p>
+                        </div>
+                        <a href="">
+                            <button type="button" id="btn-maps">Lihat Maps</button>
+                        </a>
+                    </div>
+                    <div class="card-gempa">
+                        <img src="images/earthquake-danger.png" alt="">
+                        <div class="info-list">
+                            <p><strong>Tanggal:</strong> 06 Des 2022</p>
+                            <p><strong>Jam:</strong> 17:22:05 WIB</p>
+                            <p><strong>Coordinate:</strong> -10.58,113.41</p>
+                            <p><strong>Magnitude:</strong> 5.3</p>
+                            <p><strong>Kedalaman:</strong> 10 Km</p>
+                            <p><strong>Dirasakan di:</strong> II Jember, II Kuta, II Kuta Selatan, II Denpasar</p>
+                        </div>
+                        <a href="">
+                            <button type="button" id="btn-maps">Lihat Maps</button>
+                        </a>
+                    </div>
+                    <div class="card-gempa">
+                        <img src="images/earthquake-danger.png" alt="">
+                        <div class="info-list">
+                            <p><strong>Tanggal:</strong> 06 Des 2022</p>
+                            <p><strong>Jam:</strong> 17:22:05 WIB</p>
+                            <p><strong>Coordinate:</strong> -10.58,113.41</p>
+                            <p><strong>Magnitude:</strong> 5.3</p>
+                            <p><strong>Kedalaman:</strong> 10 Km</p>
+                            <p><strong>Dirasakan di:</strong> II Jember, II Kuta, II Kuta Selatan, II Denpasar</p>
+                        </div>
+                        <a href="">
+                            <button type="button" id="btn-maps">Lihat Maps</button>
+                        </a>
+                    </div>
+                    <!-- <div class="left">
                     <h2>Gempa Bumi Terkini</h2>
                     <div class="info-list">
                         <p><strong>Tanggal:</strong> 06 Des 2022</p>
@@ -56,12 +143,12 @@
                 </div>
                 <div class="right">
                     <img src="images/earth.png" alt="">
+                </div> -->
                 </div>
             </div>
         </div>
-    </div>
 
-    <script src="js/script.js"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
