--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li>Credits</li>
                 </ul>
             </div>
-            <div class="content gempa-dirasakan">
+            <div class="content gempa-dirasakan-m5">
                 <h2>Gempa Dirasakan</h2>
                 <hr>
                 <div class="list-gempa">
