finish styling credits

--- a/index.html
+++ b/index.html
@@ -38,8 +38,22 @@
                     <li>Credits</li>
                 </ul>
             </div>
-            <div class="content gempa-dirasakan-m5">
-                <h2>Gempa Dirasakan</h2>
+            <div class="content credits">
+                <h2>Credits</h2>
+                <ul>
+                    <li>
+                        <a
+                            href="https://www.freepik.com/free-vector/planet-earth_23665961.htm#query=earth&position=0&from_view=search&track=sph">Earth
+                            Image</a>
+                    </li>
+                    <li>
+                        <a href="https://www.flaticon.com/free-icons/arrow" title="arrow icons">Arrow Circle Down
+                            Icon</a>
+                    </li>
+                </ul>
+
+                <!-- SECTION GEMPA DIRASAKAN DAN M 5+ -->
+                <!-- <h2>Gempa Dirasakan</h2>
                 <hr>
                 <div class="list-gempa">
                     <div class="card-gempa">
@@ -126,7 +140,10 @@
                             <button type="button" id="btn-maps">Lihat Maps</button>
                         </a>
                     </div>
-                    <!-- <div class="left">
+                </div> -->
+
+                <!-- SECTION GEMPA TERKINI -->
+                <!-- <div class="left">
                     <h2>Gempa Bumi Terkini</h2>
                     <div class="info-list">
                         <p><strong>Tanggal:</strong> 06 Des 2022</p>
@@ -144,7 +161,6 @@
                 <div class="right">
                     <img src="images/earth.png" alt="">
                 </div> -->
-                </div>
             </div>
         </div>
 
