styling ulang content area menjadi overflow-y scroll

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                     <li class="credits" data-param="">Credits</li>
                 </ul>
             </div>
-            <div class="content gempa-terkini">
-            </div>
+            <div class="content gempa-terkini"></div>
         </div>
 
         <script type="module" src="js/script.js"></script>
