--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="content gempa-terkini"></div>
         </div>
 
-        <script type="module" src="js/script.js"></script>
+        <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
